test/banana/typeck/should_fail/type_has_no_nested_properties.banana
a = IPTablesSource(sleep=0.01)
b = a.sleep.test

# NEW_TEST
a = CloudMarkovChainSource()
# Typo: runs -> run
b = a.transitions.web_service."runs=>slow"

# RAISE BananaPropertyDoesNotExists